chore:implement user repository - setup user repository for interracting with the database [Delivered #UserRepository]
